fixed bug in ping, cli prettier, started implementing local commands